--- a/fishbones/fishbones.css
+++ b/fishbones/fishbones.css
@@ -37,6 +37,51 @@
     width: auto;
 }
 
+.project-txt-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.img-txt-head {
+  font-size: 2.25rem;
+}
+
+.project-tag-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: .5rem;
+}
+
+.project-tag {
+  font-size: 1.25rem;
+  padding: .5rem .75rem;
+  background-color: #212224;
+  border-radius: .5rem;
+}
+
+.project-seperation {
+  margin-top: 6rem;
+}
+
+.two-project-section {
+  display: flex;
+  gap: 4rem;
+}
+
+.three-project-section {
+  display: flex;
+  gap: 1rem;
+}
+
+.breakpoint {
+  display: block;
+}
+
+.breakpoint-2 {
+  display: none;
+}
 
 .label {
   display: flex;
@@ -353,26 +398,50 @@ body {
 }
 
 @media (max-width: 1024px) {
-  .wide-point {
-    margin-left: 8%;
-    margin-right: 8%;
-  }  
 
-  .center-content {
-    margin: 0rem 12%
+  .breakpoint {
+    display: none;
   }
 
-  .content-video {
-    flex: 1.1;
+  .scrollIndicator {
+    display: none;
   }
 
-  .aspect-ratio-web {
-    aspect-ratio: 16/8.5;
-  }
+.project-txt-container {
+  gap: 1rem;
+}
+
+.img-txt-head {
+  font-size: 2rem;
+}
+
+.project-tag-container {
+  gap: .5rem;
+}
+
+.project-tag {
+  font-size: 1.25rem;
+}
+
+.project-seperation {
+  margin-top: 4rem;
+}
+
+.two-project-section {
+  gap: 2rem;
+}
+
+.three-project-section {
+  gap: 1rem;
+}
 }
 
 
 @media (max-width: 780px) {
+  .breakpoint-2 {
+    display: block;
+  }
+
   .logo {
     display: none;
   }
@@ -394,12 +463,71 @@ body {
     gap: 1rem;
   }
 
-  .aspect-ratio-web {
-    aspect-ratio: 16/10;
-  }  
+  .project-txt-container {
+    gap: 1rem;
+  }
+
+  .img-txt-head {
+    font-size: 2rem;
+  }
+
+  .project-tag-container {
+    gap: .5rem;
+  }
+
+  .project-tag {
+    font-size: 1.25rem;
+  }
+
+  .project-seperation {
+    margin-top: 4rem;
+  }
+
+  .two-project-section {
+    gap: 2rem;
+  }
+
+  .three-project-section {
+    gap: 1rem;
+  }
 }
 
 @media (max-width: 540px) {
+
+  .page-header {
+    font-size: 4rem;
+  }
+
+  .project-txt-container {
+    gap: 1rem;
+  }
+
+  .img-txt-head {
+    font-size: 2rem;
+  }
+
+  .project-tag-container {
+    gap: .5rem;
+  }
+
+  .project-tag {
+    font-size: 1.25rem;
+  }
+
+  .project-seperation {
+    margin-top: 4rem;
+  }
+
+  .two-project-section {
+    gap: 2rem;
+    flex-direction: column;    
+  }
+
+  .three-project-section {
+    gap: 1rem;
+    flex-direction: column;
+  }
+
 
   .nav-links a {
     padding: .25rem 1rem;
@@ -482,6 +610,10 @@ body {
 }
 
 @media (max-width: 425px) {
+
+  .page-header {
+    font-size: 3rem;
+  }  
 
   .vine-title img {
     display: none;
