--- a/secretsanta/style.css
+++ b/secretsanta/style.css
@@ -15,7 +15,7 @@ main {
     margin-right: 5%;
 }
 
-header {
+.text-container {
     margin-top: 10vh;
     margin-bottom: 10vh;
     align-items: center;
